# headsail-vp

./: README.md
.github/workflows/: test_mmaps.yml  validate.yml
examples/headsail-bsp/: Cargo.toml  Justfile  README.md
examples/headsail-bsp-ffi/: Cargo.toml
examples/headsail-bsp/.cargo/: config.toml
examples/headsail-bsp/examples/: interrupts.rs  panic.rs  uart0.rs  uart0_read.rs
examples/headsail-bsp/openocd/: hpc.cfg  sysctrl.cfg
examples/headsail-bsp/src/: apb_timer.rs  apb_uart.rs  gpio.rs  lib.rs  mmap.rs  soc_ctrl.rs  sprintln.rs  tb.rs  timer_unit.rs  ufmt_panic.rs
examples/headsail-bsp/src/sysctrl/: gpio.rs  mmap.rs  soc_ctrl.rs
examples/headsail-bsp/src/sysctrl/udma/: spim.rs  uart.rs
examples/hello-hpc/: Cargo.toml
examples/hello-sysctrl/: renode.sh
examples/hpc-c/crt0/: Makefile  boot.c  boot.h.gch  crt0.s  linker.lds  linker_sdram.lds
examples/hpc-c/hello-hpc/: CMakeLists.txt  Justfile  README.md  main.c
examples/hpc-c/hello-newlib-hpc/: CMakeLists.txt  README.md  debug_script.gdb  disassemble-elf.sh  hello-hpc.asm  inspect_impure_data.dbg  linker.lds  load_impure_data.dbg  main.c
examples/hpc-c/newlib/include/: newlib.h
examples/hpc-c/test-bsp-ffi/: CMakeLists.txt  Justfile  README.md  main.c
examples/hpc/.cargo/: config.toml
examples/hpc/crt0/: linker.lds
examples/hpc/dla-driver-ffi/: Justfile
examples/hpc/dla-driver/.cargo/: config.toml
examples/hpc/dla-driver/examples/: depthwise.rs  dla.rs  validate_conv.rs
examples/hpc/dla-driver/src/: layers.rs  utils.rs
examples/hpc/hello-dla/: Cargo.toml  connect-and-load.gdb
examples/hpc/hello-dla/.cargo/: config.toml
examples/hpc/hello-dla/examples/: dla.rs
examples/hpc/hello-hpc/: Cargo.toml
examples/hpc/hello-hpc/examples/: timer0.rs  uart0.rs
examples/hpc/hello-hpc/src/: lib.rs
examples/hpc/minimal-c/: CMakeLists.txt  Justfile  boot.h  main.c
examples/hpc/minimal-c/scripts/: export_riscv.env
examples/hpc/test-ffi/: CMakeLists.txt  main.c
examples/hpc/test-ffi/scripts/: export_riscv.env
examples/hpc/test-memory-maps/: Cargo.toml  Justfile
examples/hpc/test-memory-maps/src/: main.rs
examples/sysctrl/hello-sysctrl/: Cargo.toml  Justfile
examples/sysctrl/hello-sysctrl/examples/: apb_uart0.rs  check_ram.rs  init_hpc.rs  led.rs  spim0.rs  uart0.rs  udma_uart.rs
examples/sysctrl/hello-sysctrl/src/: lib.rs
scripts/: run_on_hpc.sh  run_on_sysctrl.sh  setup_renode.sh
scripts/resc/: 0_mach_create.resc  2_run_hpc.resc
scripts/robot/: test_mmaps.robot  test_pass.robot
vp/devel/: README.md  headsail.repl  hpc.repl
vp/devel/python_peripherals/: DLA.py
