[package]
name = "hello-dla"
version = "0.1.0"
edition = "2021"

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
headsail-bsp = { version = "0.1.0", path = "../../headsail-bsp", features = [
    "hpc-rt",
] }
